--- a/view/css/estils.css
+++ b/view/css/estils.css
@@ -216,8 +216,8 @@ h1 {
 
 /* copyright stuffs.. */
 p {
-  text-align: center;
-  padding-top: 20px;
+  padding-left: 25px;
+  padding-top: 2px;
 }
 
 table {
