Eliminar perfecte i anem a dormir

--- a/view/css/estils.css
+++ b/view/css/estils.css
@@ -1,3 +1,6 @@
+.esquerra{
+    text-align: left;
+}
 /*Colores: rojo flojo(#ce2929), rojo granate(#770e0e), blanco(white)*/
 html, body {
 	height: 100%;
